objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>If(Opportunities_Won__c&gt;0,&quot;Existing Client&quot;,
IF(of_Open_Opportunities__c&gt;0,&quot;In Discussions&quot;,
&quot;Cold Prospect&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Vision__c</fullName>
        <label>Account Team Vision (2-3 Yrs)</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <inlineHelpText>C&amp;I:     Commercial &amp; Industrial
IOU:     Independently Operated Utility
IPP:      Independent Power Producer
MOU:   Municipal Owned Utility
Coop:  Cooperative Utility
CCA:   Community Choice Aggregation
G&amp;T:    Generation &amp; Transmission</inlineHelpText>
        <label>Type of Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C&amp;I</fullName>
                </value>
                <value>
                    <fullName>IOU</fullName>
                </value>
                <value>
                    <fullName>IPP</fullName>
                </value>
                <value>
                    <fullName>Municipal (MOU)</fullName>
                </value>
                <value>
                    <fullName>Non-Muni Govt</fullName>
                </value>
                <value>
                    <fullName>Coop</fullName>
                </value>
                <value>
                    <fullName>CCA</fullName>
                </value>
                <value>
                    <fullName>G&amp;T</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Trading Desk</fullName>
                </value>
                <value>
                    <fullName>REC Broker</fullName>
                </value>
                <value>
                    <fullName>Power Broker</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>Windfarm ltd.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Unique_Selling_Propositions__c</fullName>
        <label>RES&apos;s Unique Selling Proposition</label>
        <length>1500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIA</fullName>
                </value>
                <value>
                    <fullName>APA</fullName>
                </value>
                <value>
                    <fullName>BLM Exclusive</fullName>
                </value>
                <value>
                    <fullName>BLM Leased</fullName>
                </value>
                <value>
                    <fullName>BOP</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Contribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agresso_Vendor_ID__c</fullName>
        <label>Agresso Vendor ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_s_Business_Drivers__c</fullName>
        <inlineHelpText>The Client&apos;s Business Pressures &amp; Business Drivers</inlineHelpText>
        <label>Client&apos;s Business Drivers</label>
        <length>1700</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_Customer_Types__c</fullName>
        <label>Customer Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>C&amp;I</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_New_Entrant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Entrant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Services__c</fullName>
        <label>Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development &amp; Origination</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>In-House Engineering</fullName>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>O&amp;M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Territory_Footprint__c</fullName>
        <label>Territory Footprint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local/Regional</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Tier__c</fullName>
        <label>Competitor Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Freq__c</fullName>
        <formula>IF(ISPICKVAL(Tier__c, &quot;Key&quot;),30, IF(ISPICKVAL(Tier__c, &quot;Major&quot;),60,IF(ISPICKVAL(Tier__c, &quot;Prospect&quot;),120,180)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days that the Account Owner is expected to reach out to someone within this Account.  This figure is determined by the Tier field, and will be measured against the # of days since the Last Activity for this Account was logged.</inlineHelpText>
        <label>Contact Freq. (# Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Countries_where_active__c</fullName>
        <inlineHelpText>The list of countries/markets where this account is active.</inlineHelpText>
        <label>Countries where active</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Monaco</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Northern Ireland</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Republic of Ireland</fullName>
                </value>
                <value>
                    <fullName>Scotland</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Issues__c</fullName>
        <label>Issue 1 Details</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Sponsor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Renewable Energy Systems</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>RES T&amp;D</value>
            </filterItems>
            <infoMessage>Please check that this CONTACT has been created on either the &apos;RES T&amp;D&apos; Account, or on one of the &apos;Renewable Energy System&apos; Accounts.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the old ID field from the EMEA SF Org</description>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>G_T_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Is this Account a member of a Generation and Transmission Association?</inlineHelpText>
        <label>G&amp;T Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (G&amp;T Member)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investor Account</label>
        <referenceTo>Investor_Account__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_1__c</fullName>
        <label>Issue 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Top_3_issues_for_account</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_2_Details__c</fullName>
        <label>Issue 2 Details</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue_2__c</fullName>
        <label>Issue 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Top_3_issues_for_account</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_3_Details__c</fullName>
        <label>Issue 3 Details</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue_3__c</fullName>
        <label>Issue 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Top_3_issues_for_account</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landowner_Ownership__c</fullName>
        <label>Landowner Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Owner</fullName>
                </value>
                <value>
                    <fullName>Co-Owner</fullName>
                </value>
                <value>
                    <fullName>Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landowner_Type__c</fullName>
        <label>Landowner Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mineral Owner</fullName>
                </value>
                <value>
                    <fullName>Surface Owner</fullName>
                </value>
                <value>
                    <fullName>Land Agent</fullName>
                </value>
                <value>
                    <fullName>Farming Tenant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Update__c</fullName>
        <description>Replica of the Opportunity.Latest_Update__c field</description>
        <inlineHelpText>Any recent news, comment, feedback or other updates for the Account.</inlineHelpText>
        <label>Latest Update</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Neglected_Accts_Ticker__c</fullName>
        <formula>Contact_Freq__c -(Today()-LastActivityDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># of Days since the Last Activity was logged on this Account, compared to the expected &apos;Contact Freq&apos; field. 
If figure is Negative, it represents the # of Days this Account has been Neglected.</inlineHelpText>
        <label>Neglected Accts Ticker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Projects_Constructed_by_RES__c</fullName>
        <label># of Projects Constructed by RES</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Construction</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunities_Won__c</fullName>
        <label># of Opportunities Won</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PPA_contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Eventually to be deleted</description>
        <label>PPA contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Parcel that this Landowner associated to.</inlineHelpText>
        <label>Parcel</label>
        <referenceTo>Landowner_Parcel__c</referenceTo>
        <relationshipLabel>Landowner Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_id_Formula__c</fullName>
        <formula>Parent.Id</formula>
        <label>Parent id Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTO_Region__c</fullName>
        <label>RTO/Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AESO</fullName>
                </value>
                <value>
                    <fullName>BASN</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CAISO</fullName>
                </value>
                <value>
                    <fullName>CALN</fullName>
                </value>
                <value>
                    <fullName>CALS</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>DSW</fullName>
                </value>
                <value>
                    <fullName>ERCOT</fullName>
                </value>
                <value>
                    <fullName>FRCC</fullName>
                </value>
                <value>
                    <fullName>HECO</fullName>
                </value>
                <value>
                    <fullName>IESO</fullName>
                </value>
                <value>
                    <fullName>IID (CA)</fullName>
                </value>
                <value>
                    <fullName>ISO-NE (NEPOOL)</fullName>
                </value>
                <value>
                    <fullName>Manitoba</fullName>
                </value>
                <value>
                    <fullName>MAPP</fullName>
                </value>
                <value>
                    <fullName>Maritime</fullName>
                </value>
                <value>
                    <fullName>MISO</fullName>
                </value>
                <value>
                    <fullName>NYISO</fullName>
                </value>
                <value>
                    <fullName>PJM</fullName>
                </value>
                <value>
                    <fullName>Quebec</fullName>
                </value>
                <value>
                    <fullName>ROCK</fullName>
                </value>
                <value>
                    <fullName>Saks Power</fullName>
                </value>
                <value>
                    <fullName>SERC</fullName>
                </value>
                <value>
                    <fullName>SERC-E</fullName>
                </value>
                <value>
                    <fullName>SERC-N</fullName>
                </value>
                <value>
                    <fullName>SERC-SE</fullName>
                </value>
                <value>
                    <fullName>SERC-W</fullName>
                </value>
                <value>
                    <fullName>SPP</fullName>
                </value>
                <value>
                    <fullName>WECC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_of_the_Account__c</fullName>
        <inlineHelpText>These include the Client&apos;s:
Business goals,
Vision,
Financial Goals,
Company Objectives</inlineHelpText>
        <label>Client&apos;s Vision/Business Goals</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <inlineHelpText>What&apos;s their Value Prop? Areas where RES may be vulnerable.</inlineHelpText>
        <label>What are their Strengths?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technology_Business_Lines__c</fullName>
        <label>Technology Business Lines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wind</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>T&amp;D</fullName>
                </value>
                <value>
                    <fullName>Distributed</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <inlineHelpText>To help characterize the priority &amp; nature of RES&apos;s relationship with this Account.
Previously called &apos;Tier&apos;</inlineHelpText>
        <label>Type of Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global Key</fullName>
                </value>
                <value>
                    <fullName>Regional Key</fullName>
                </value>
                <value>
                    <fullName>BL Key</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Existing Client</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_MWh__c</fullName>
        <label>Total MWh</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_PPA__c</fullName>
        <label>Type of PPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporate Buyer</fullName>
                </value>
                <value>
                    <fullName>PPA Adviser</fullName>
                </value>
                <value>
                    <fullName>PPA Trader/Broker</fullName>
                </value>
                <value>
                    <fullName>Public Sector Buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_are_their_Weaknesses__c</fullName>
        <label>What are their Weaknesses?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Open_Opportunities__c</fullName>
        <label># of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Opps_Won_Current_FY__c</fullName>
        <inlineHelpText>This calculates the number of Opportunities that were won within the Current Fiscal Year</inlineHelpText>
        <label># of Opps Won Current FY</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>11/1/2021</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>10/31/2022</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>false</active>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Landowner</fullName>
        <active>false</active>
        <label>Landowner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Account</fullName>
        <active>true</active>
        <description>Is this a Prospective Client, Asset Owner, or Potential Offtaker?</description>
        <label>Prospect / Client Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier_Partnership_Account</fullName>
        <active>false</active>
        <description>Is this Account a Partner, Vendor, or entity that we are NOT actively selling to?</description>
        <label>Supplier Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Type_is_Entered</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Account_Type__c,&quot;&quot;), 
RecordTypeId=&apos;012i0000001AwFvAAK&apos;,
ISNEW(),
$User.ProfileId  &lt;&gt; &quot;00ei0000001BR5D&quot;)</errorConditionFormula>
        <errorDisplayField>Account_Type__c</errorDisplayField>
        <errorMessage>Please Enter Account Type in order to save this record.</errorMessage>
    </validationRules>
</CustomObject>